--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.363.0",
     "@formspree/react": "^2.4.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -18,6 +19,7 @@
     "clipboard": "^2.0.11",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "formidable": "^3.5.0",
     "framer-motion": "^10.12.16",
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
@@ -33,6 +35,7 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@types/aos": "^3.0.4",
+    "@types/formidable": "^3.4.0"
   }
 }
