--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "clipboard": "^2.0.11",
+    "contentful": "^10.5.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "formidable": "^3.5.0",
     "framer-motion": "^10.12.16",
+    "graphql-request": "^6.1.0",
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
     "next": "13.4.4",
@@ -29,7 +31,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^7.3.3",
     "react-responsive": "^9.0.2",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "use-sound": "^4.0.1"
