--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "graphql-request": "^6.1.0",
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
+    "interweave": "^13.1.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
-    "@types/formidable": "^3.4.0"
+    "@types/formidable": "^3.4.0",
+    "interweave-ssr": "^2.0.0"
   }
 }
