--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clipboard": "^2.0.11",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "formidable": "^3.5.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^10.12.16",
     "graphql-request": "^6.1.0",
     "gsap": "^3.12.1",
@@ -32,6 +32,7 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-responsive": "^9.0.2",
+    "resend": "^1.0.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
