--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.363.0",
     "@formspree/react": "^2.4.2",
+    "@react-email/heading": "0.0.9",
+    "@react-email/html": "0.0.4",
+    "@react-email/link": "0.0.5",
+    "@react-email/tailwind": "0.0.9",
+    "@react-email/text": "0.0.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.1",
     "clipboard": "^2.0.11",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -29,11 +35,12 @@
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "1.9.5",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-responsive": "^9.0.2",
     "resend": "^1.0.0",
-    "swr": "^2.2.2",
+    "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "use-sound": "^4.0.1"
