--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/formidable": "^3.4.0",
+    "@types/uuid": "^9.0.5",
     "interweave-ssr": "^2.0.0"
   }
 }
