--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hamburger-react": "^2.5.0",
     "interweave": "^13.1.0",
     "next": "13.4.4",
+    "p-throttle": "^5.1.0",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
