removed unused fonts

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-email/link": "0.0.5",
     "@react-email/tailwind": "0.0.9",
     "@react-email/text": "0.0.5",
+    "@react-three/fiber": "^8.15.10",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.158.2",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.1",
@@ -31,7 +33,7 @@
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
     "interweave": "^13.1.0",
-    "next": "13.4.4",
+    "next": "^14.0.2",
     "p-throttle": "^5.1.0",
     "postcss": "8.4.24",
     "react": "^18.2.0",
@@ -41,8 +43,10 @@
     "react-loader-spinner": "^5.3.4",
     "react-responsive": "^9.0.2",
     "resend": "^1.0.0",
+    "shadergradient": "^1.2.4",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
+    "three": "^0.158.0",
     "typescript": "5.1.3",
     "use-sound": "^4.0.1",
     "uuid": "^9.0.1"
