--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
     "interweave": "^13.1.0",
-    "next": "^14.0.2",
+    "next": "13.4.4",
     "p-throttle": "^5.1.0",
     "postcss": "8.4.24",
     "react": "^18.2.0",
