--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/three": "^0.158.2",
+    "@vercel/analytics": "^1.1.1",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.1",
