--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-email/tailwind": "0.0.9",
     "@react-email/text": "0.0.5",
     "@react-three/fiber": "^8.15.10",
+    "@splinetool/react-spline": "^2.2.6",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
