Add new icon links bar to footer, update button sizes and variants, update experience and academics info

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/papers/fetch-all/route.js", "src/app/papers/page.tsx", "src/app/papers/view/page.jsx", "src/app/literature/page.tsx", "src/app/literature/[slug]/page.tsx", "src/app/photography/page.tsx", "src/app/api/contact/route.ts", "src/components/Scene.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/papers/fetch-all/route.js", "src/app/papers/page.tsx", "src/app/papers/view/page.jsx", "src/app/literature/page.tsx", "src/app/literature/[slug]/page.tsx", "src/app/photography/page.tsx", "src/app/api/contact/route.ts", "src/components/Scene.jsx", "src/components/MarqueeButton2.jsx"],
   "exclude": ["node_modules"]
 }
