--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.5.1",
     "clipboard": "^2.0.11",
+    "contentful": "^10.6.16",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "formidable": "^3.5.1",
@@ -35,7 +36,7 @@
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
     "interweave": "^13.1.0",
-    "next": "13.4.4",
+    "next": "^14.0.4",
     "p-throttle": "^5.1.0",
     "postcss": "8.4.24",
     "react": "^18.2.0",
@@ -57,6 +58,7 @@
     "@types/aos": "^3.0.4",
     "@types/formidable": "^3.4.0",
     "@types/uuid": "^9.0.5",
+    "encoding": "^0.1.13",
     "interweave-ssr": "^2.0.0",
     "postcss-nesting": "^12.0.1"
   }
