--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.363.0",
     "@formspree/react": "^2.4.2",
+    "@react-email/components": "0.0.12",
     "@react-email/heading": "0.0.9",
     "@react-email/html": "0.0.4",
     "@react-email/link": "0.0.5",
+    "@react-email/render": "^0.0.10",
     "@react-email/tailwind": "0.0.9",
     "@react-email/text": "0.0.5",
     "@react-three/fiber": "^8.15.10",
@@ -36,16 +38,15 @@
     "gsap": "^3.12.1",
     "hamburger-react": "^2.5.0",
     "interweave": "^13.1.0",
-    "next": "^14.0.4",
+    "next": "13.4.4",
     "p-throttle": "^5.1.0",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-email": "1.9.5",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
     "react-responsive": "^9.0.2",
-    "resend": "^1.0.0",
+    "resend": "^1.1.0",
     "shadergradient": "^1.2.4",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
