--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "resend": "^1.1.0",
     "shadergradient": "^1.2.4",
     "swr": "^2.2.4",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.2",
     "three": "^0.158.0",
     "typescript": "5.1.3",
